infra/core/ecs.notes-app.service.tf
resource "aws_ecs_task_definition" "app" {
  family                   = "app"
  cpu                      = 512
  memory                   = 512
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  container_definitions = jsonencode([
    {
      name      = "notes-app"
      essential = true
      image     = "${aws_ecr_repository.app.repository_url}:latest"
      portMappings = [
        {
          contaierPort = 3001
          protocol     = "tcp"
        }
      ]
      logConfiguration = {
        logDriver = "awslogs"
        options = {
          awslogs-group         = aws_cloudwatch_log_group.app.name
          awslogs-region        = data.aws_region.current.name
          awslogs-stream-prefix = "notes-app"
        }
      }
      secrets = [
        {
          name      = "MONGODB_URI"
          valueFrom = "arn:aws:secretsmanager:${data.aws_region.current.name}:${data.aws_caller_identity.current.account_id}:secret:notes-app/db_uri-6vWTjW"
        },
        {
          name      = "SEKRET"
          valueFrom = "arn:aws:secretsmanager:${data.aws_region.current.name}:${data.aws_caller_identity.current.account_id}:secret:notes-app/encryption-secret-L1Zccc"
        }
      ]
    }
  ])
}

resource "aws_security_group" "app" {
  name        = "${local.core_name_prefix}-app-sg"
  description = "Security group for the notes app"
  vpc_id      = aws_vpc.core.id
  ingress {
    from_port   = 3001
    to_port     = 3001
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_ecs_service" "app" {
  name            = "${terraform.workspace}-app"
  cluster         = aws_ecs_cluster.app.id
  task_definition = aws_ecs_task_definition.app.arn
  desired_count   = 1

  capacity_provider_strategy {
    capacity_provider = "FARGATE"
    weight            = 1
    base              = 1
  }

  capacity_provider_strategy {
    capacity_provider = "FARGATE_SPOT"
    weight            = 100
  }

  network_configuration {
    subnets          = aws_subnet.core_private[*].id
    security_groups  = [aws_security_group.app.id]
    assign_public_ip = false
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.app.arn
    container_name   = "notes-app"
    container_port   = "3001"
  }

  deployment_circuit_breaker {
    enable   = true
    rollback = true
  }

  lifecycle {
    ignore_changes = [task_definition]
  }
}

resource "aws_cloudwatch_log_group" "app" {
  name              = "app-log-group"
  retention_in_days = 1
  tags = {
    Name = "app-log-group"
  }
}
